--- a/index.html
+++ b/index.html
@@ -4,13 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Dad jokes by MP</title>
+
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playwrite+IT+Moderna:wght@100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link href="src/styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <button id="generate-joke-button">Tell me a joke</button>
-    <div id="joke"></div>
+    <video autoplay muted loop id="background-video">
+      <source
+        src="media/sailing_boat_by_Yaroslav_Shuraev_2.mp4"
+        type="video/mp4"
+      />
+    </video>
+    <div>
+      <section class="jokes-section">
+        <button class="joke-button btn-branding" id="generate-joke-button">
+          Tell me a joke
+        </button>
+        <div id="joke"></div>
+      </section>
+    </div>
+
     <script src="src/index.js"></script>
   </body>
 </html>
